build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/teamcity.phpt.warn
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'assertions'
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
